--- a/frogger/index.html
+++ b/frogger/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h3>Seconds left: <span id="time-left" class="time-left">20</span></h3>
-    <h3>Result: <span class="result" id="result">0</span></h3>
+    <h3>Result: <span class="result" id="result"></span></h3>
 
     <button id="start-pause-button" class="start-pause-button">
       Start/Pause
